# sails-by-example

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
counter/: Cargo.toml  Makefile  lib.ts  main.ts
counter-proxy/app/: Cargo.toml
counter-proxy/app/src/: lib.rs
counter-with-event/: Cargo.toml  Makefile  README.md  build.rs  config.ts  config.yaml  deploy.mjs  deploy.ts  global.d.ts  interact.ts  lib.ts  main.ts  postIDL.mjs  postIDL.ts  read.ts
counter-with-event-caller/: Cargo.toml  README.md  build.rs
counter-with-event-caller/app/: Cargo.toml
counter-with-event-caller/app/src/: lib.rs
counter-with-event-caller/client/: Cargo.toml  build.rs
counter-with-event-caller/client/src/: lib.rs
counter-with-event-caller/src/: lib.rs
counter-with-event-caller/tests/: gtest.rs
counter-with-event/app/: Cargo.toml
counter-with-event/app/src/: lib.rs
counter-with-event/client/: .gitignore  Cargo.toml  build.rs  counter_with_event.idl
counter-with-event/client/src/: counter_with_event_client.rs  lib.rs
counter-with-event/frontend/: index.html  package.json  parseIDL.ts  tailwind.config.cjs  tsconfig.json  vite.config.js
counter-with-event/frontend/src/: App.css  App.jsx  main.jsx  withProviders.tsx
counter-with-event/frontend/src/components/: BlockNumber.jsx  Center.jsx  Chat.jsx  Connector.jsx  ContractInteraction.jsx  CounterCard.tsx  EventListener.jsx  Footer.jsx  Loader.jsx  LoadingAPI.jsx  NetworkStatus.jsx  NodeInfo.jsx  PendingPayouts.jsx  Program.jsx  ProgramEvents.jsx  ProgramInteraction.jsx  RpcUrlCustomizer.jsx  SailsEventList.jsx  SailsEvents.jsx  SailsInteraction.jsx  SailsMessageForm.tsx  SailsPreview.jsx  SailsProgram.jsx  SailsReadWrite.jsx  SailsStateForm.tsx  Sidebar.jsx  StickyNavbar.jsx  ThemeChanger.jsx  ThemeSwitcher.jsx  WalletBalances.jsx  WalletConnection.jsx  WalletManager.jsx  WalletSelector.jsx
counter-with-event/frontend/src/contexts/: ApiContext.jsx  WalletContext.jsx
counter-with-event/frontend/src/entities/formPayload/: index.ts
counter-with-event/frontend/src/entities/formPayload/model/: types.ts
counter-with-event/frontend/src/entities/hooks/: index.ts
counter-with-event/frontend/src/entities/hooks/model/: types.ts
counter-with-event/frontend/src/entities/metadata/: index.ts
counter-with-event/frontend/src/entities/metadata/model/: index.ts  types.ts
counter-with-event/frontend/src/entities/modal/: index.ts
counter-with-event/frontend/src/entities/node/: index.ts
counter-with-event/frontend/src/features/gasField/: index.ts
counter-with-event/frontend/src/features/gasField/ui/GasField/: GasField.module.scss  GasField.tsx  index.ts
counter-with-event/frontend/src/features/sails/: consts.ts  types.ts
counter-with-event/frontend/src/features/sails/hooks/: index.ts
counter-with-event/frontend/src/features/sails/utils/: field.ts  index.ts  type.ts
counter-with-event/frontend/src/hooks/: index.ts  useChangeEffect.ts  useSails.js  useWalletBalances.js
counter-with-event/frontend/src/hooks/schemas/: index.ts  use-balance-schema.ts  use-gas-limit-schema.ts
counter-with-event/frontend/src/hooks/useGasCalculate/: helpers.ts  index.ts  types.ts  useGasCalculate.ts
counter-with-event/frontend/src/hooks/useMessageActions/: index.ts  types.ts  useMessageActions.ts
counter-with-event/frontend/src/lib/: counter.js  counterProgram.js  dns.js  lucky-draw.js
counter-with-event/frontend/src/pages/: Chat.jsx  Counter.jsx  DNS.jsx  Debug.jsx  Home.jsx  LuckyDraw.jsx
counter-with-event/frontend/src/shared/: config.ts
counter-with-event/frontend/src/shared/ui/: index.ts
counter-with-event/frontend/src/shared/ui/form/: Form.module.scss  index.ts
counter-with-event/frontend/src/utils/: SingleAccountSigner.ts  index.ts
counter-with-event/src/: lib.rs
counter-with-event/tests/: gtest.rs
counter-with-event/wasm/: Cargo.toml  build.rs  counter_with_event.idl
counter-with-event/wasm/src/: lib.rs
counter/app/: Cargo.toml
counter/app/src/: lib.rs
counter/client/: Cargo.toml
counter/tests/: gtest.rs
counter/wasm/: Cargo.toml  build.rs  counter.idl
counter/wasm/src/: lib.rs
dns/: README.md  (+5 more)
hello-world/: Cargo.toml  README.md  build.rs
hello-world/app/: Cargo.toml
hello-world/app/src/: lib.rs
hello-world/client/: Cargo.toml  build.rs
hello-world/client/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: gtest.rs
lesson_02_part_01/wasm/: Cargo.toml  build.rs  lesson_02_part_01.idl
lesson_02_part_01/wasm/src/: lib.rs
lesson_02_part_02/wasm/: Cargo.toml  build.rs  lesson_02_part_02.idl
lesson_02_part_02/wasm/src/: lib.rs
lesson_03_part_01/wasm/: Cargo.toml  build.rs
lesson_03_part_01/wasm/src/: lib.rs
lesson_03_part_02/app/: Cargo.toml
lesson_03_part_02/app/src/: lib.rs
lesson_03_part_02/wasm/: Cargo.toml  build.rs  lesson_03_part_02.idl
lesson_03_part_02/wasm/src/: lib.rs
lucky-draw/: Cargo.toml  Makefile  build.rs  deploy.mjs  draft.idl  lib.ts  main.ts
lucky-draw/app/: Cargo.toml
lucky-draw/app/src/: lib.rs
lucky-draw/client/: Cargo.toml  build.rs
lucky-draw/client/src/: lib.rs
lucky-draw/src/: lib.rs
lucky-draw/tests/: gtest.rs
lucky-draw/wasm/: Cargo.toml  build.rs  lucky_draw.idl
lucky-draw/wasm/src/: lib.rs
pausable-ownable-counter/: Cargo.toml
pausable-ownable-counter/app/: Cargo.toml
pausable-ownable-counter/app/src/: counter.rs  lib.rs
pausable-ownable-counter/wasm/: Cargo.toml  build.rs  pausable_ownable_counter.idl
pausable-ownable-counter/wasm/src/: lib.rs
ping/: Cargo.toml  README.md  build.rs
ping/app/: Cargo.toml
ping/app/src/: lib.rs
ping/app/src/services/ping/: mod.rs
ping/client/: Cargo.toml  build.rs
ping/client/src/: lib.rs
ping/src/: lib.rs
ping/tests/: gtest.rs
ping/wasm/: Cargo.toml  build.rs  ping.idl
ping/wasm/src/: lib.rs
ss58/: Cargo.toml  Makefile  README.md  build.rs  deploy.ts  global.d.ts  lib.ts
ss58/app/: Cargo.toml
ss58/app/src/: lib.rs  ss58.rs
ss58/client/: Cargo.toml  build.rs
ss58/client/src/: lib.rs
ss58/src/: lib.rs
ss58/tests/: gtest.rs
(+112 files in other folders)
