[workspace]
resolver = "2"
members = [
    #"*/app",
    #"*/wasm",
    #"*/client",
    "lib",
    "ping",
    "hello-world",
    "counter",
    "counter-with-event",
    "counter-with-event-caller",
    "ss58",
]
exclude = [
    "gear-erc20/app",
    "gear-erc20/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
gstd = "1.8.1"
gtest = "1.8.1"
gclient = "1.8.1"
gear-core = "1.8.1"
gear-wasm-builder = "1.8.1"
sails-idl-gen = "0.8.1"
sails-client-gen = "0.8.1"
sails-rs = "0.8.1"
# sails-idl-gen = { git = "https://github.com/gear-tech/sails" }
# sails-client-gen = { git = "https://github.com/gear-tech/sails" }
# sails-rs = { git = "https://github.com/gear-tech/sails" }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }
primitive-types = { version = "*", default-features = false }
derive-more = { version = "*", default-features = false, features = ["display"] }
log = "*"
env_logger = "*"
serde = "1.0"
serde-json = { package = "serde_json", version = "1.0" }
syn = "2.0"
thiserror = "1.0"
tokio = "1.36"
trybuild = "1"
vft-service = { git = "https://github.com/varazone/standards" }
# vft-service = { git = "https://github.com/gear-foundation/standards" }
mockall = "0.12"
