# [workspace]
# members = ["client"]

[package]
name = "counter-with-event-caller"
version = "0.1.0"
edition = "2024"

[dependencies]
counter-with-event-caller-app = { path = "app" }

[build-dependencies]
counter-with-event-caller-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
counter-with-event-caller = { path = ".", features = ["wasm-binary"] }
counter-with-event-caller-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
