# [workspace]
# members = ["client"]

[package]
name = "counter-with-event"
version = "0.1.0"
edition = "2024"

[dependencies]
counter-with-event-app = { path = "app" }

[build-dependencies]
counter-with-event-app = { path = "app" }
sails-rs = { version = "0.9.0", features = ["wasm-builder"] }
sails-idl-gen = "0.9.0"

[dev-dependencies]
counter-with-event = { path = ".", features = ["wasm-binary"] }
counter-with-event-client = { path = "client" }
sails-rs = { version = "0.9.0", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
