# [workspace]
# members = ["client"]

[package]
name = "counter"
version = "0.1.0"
edition = "2024"

[dependencies]
counter-app = { path = "app" }

[build-dependencies]
counter-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
counter = { path = ".", features = ["wasm-binary"] }
counter-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
