# [workspace]
# members = ["client"]

[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-world-app = { path = "app" }

[build-dependencies]
hello-world-app = { path = "app" }
sails-rs = { version = "0.6.1", features = ["wasm-builder"] }
sails-idl-gen = "0.6.1"

[dev-dependencies]
hello-world = { path = ".", features = ["wasm-binary"] }
hello-world-client = { path = "client" }
sails-rs = { version = "0.6.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
