# [workspace]
# members = ["client"]

[package]
name = "lucky-draw"
version = "0.1.0"
edition = "2024"

[dependencies]
lucky-draw-app = { path = "app" }

[build-dependencies]
lucky-draw-app = { path = "app" }
sails-rs = { version = "0.9.0", features = ["wasm-builder"] }
sails-idl-gen = "0.9.0"

[dev-dependencies]
lucky-draw = { path = ".", features = ["wasm-binary"] }
lucky-draw-client = { path = "client" }
sails-rs = { version = "0.9.0", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
