#[workspace]
#members = ["client"]

[package]
name = "ping"
version = "0.1.0"
edition = "2021"

[dependencies]
ping-app = { path = "app" }

[build-dependencies]
ping-app = { path = "app" }
sails-rs = { version = "0.6.1", features = ["wasm-builder"] }
sails-idl-gen = "0.6.1"

[dev-dependencies]
ping = { path = ".", features = ["wasm-binary"] }
ping-client = { path = "client" }
sails-rs = { version = "0.6.1", features = ["gtest"] }
tokio = { version = "1.40", features = ["rt", "macros"] }

[features]
wasm-binary = []
