[package]
name = "counter_proxy_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true
counter_with_event_client = { path = "../../counter-with-event/client" }
scale-info = { version = "*", default-features = false }
parity-scale-codec = { version = "*", default-features = false }