[package]
name = "counter-with-event-caller-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = "0.8.1"
scale-info = { version = "*", default-features = false }
parity-scale-codec = { version = "*", default-features = false }
counter-with-event-client = { path = "../../counter-with-event/client" }
