[package]
name = "counter_with_event"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
counter_with_event_app = { path = "../app" }

[build-dependencies]
gear-wasm-builder.workspace = true
sails-idl-gen.workspace = true
counter_with_event_app = { path = "../app" }
