[package]
name = "hello-world-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.9.0"

[build-dependencies]
hello-world-app = { path = "../app" }
sails-client-gen = "0.9.0"
sails-idl-gen = "0.9.0"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
