[package]
name = "lesson_03_part_01"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lesson_03_part_01_app = { path = "../app" }

[build-dependencies]
gear-wasm-builder.workspace = true
sails-idl-gen.workspace = true
lesson_03_part_01_app = { path = "../app" }
