[package]
name = "ss58-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = "0.8.1"
blake2 = { version = "0.10", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false }
scale-info = { version = "*", default-features = false }
parity-scale-codec = { version = "*", default-features = false }
